Add egenix-mxodbc-zopeda add-on for Plone

--- a/add-ons.html
+++ b/add-ons.html
@@ -17,6 +17,8 @@
 <p>Two different ways to integrate Solr, the Lucene based search engine, into Plone</p>
 <h3><a href="https://pypi.python.org/pypi/eea.facetednavigation">eea.facetednavigation</a></h3>
 <p>Turn folders and collections into faceted searches</p>
+<h3><a href="https://pypi.python.org/pypi/egenix-mxodbc-zopeda/">egenix-mxodbc-zopeda</a></h3>
+<p>Connect Plone to relational databases</p>
 <h3><a href="https://pypi.python.org/pypi/ftw.calendar">ftw.calendar</a></h3>
 <p>A calendar view based on arshaw.com/fullcalendar</p>
 <h3><a href="https://pypi.python.org/pypi/plone.app.imagecropping">plone.app.imagecropping</a></h3>
